--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,8 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /.idea/libraries/
+
+#allure
+.allure/
+allure-results/
+allure-report/
